# cryptography-labs

./: .gitignore  CMakeLists.txt  README.md
OpenSSL/: .gitignore  CMakeLists.txt  README.md
OpenSSL/data/: key_private.pem  key_public.pem  symm_decrypt.txt
OpenSSL/include/bignum/: bignum_utils.h
OpenSSL/include/enc_asym/: enc_asym_utils.h
OpenSSL/include/enc_symm/: enc_symm_utils.h
OpenSSL/include/hashing/: hashing_utils.h
OpenSSL/include/tests/: tests.h
OpenSSL/src/: main.c  utils.c
OpenSSL/src/bignum/: bignum_basics.c  bignum_conversions.c  bignum_copy.c  bignum_operations.c
OpenSSL/src/enc_asym/: enc_asym_RSA.c  enc_asym_file_operations.c  enc_asym_key_generation.c
OpenSSL/src/enc_symm/: enc_symm_decrypt_compute.c  enc_symm_encrypt_compute.c
OpenSSL/src/hashing/: hashing_hmac_compute.c  hashing_hmac_verify.c  hashing_md5_compute.c  hashing_utils.c
OpenSSL/src/random/: random_generate_bytes.c  random_seed_prng.c
OpenSSL/tests/bignum/: test_bignum_basic_operations.c  test_bignum_basics.c
OpenSSL/tests/enc_asym/: test_enc_asym_basics.c
OpenSSL/tests/enc_symm/: test_encrypt_aes256cbc_compute_from_file.c  test_encrypt_decrypt_aes256cbc_compute.c
OpenSSL/tests/hashing/: test_hmac_compute_from_file.c  test_hmac_sha256_compute.c  test_hmac_sha256_verify.c  test_md5.c
OpenSSL/tests/misc/: test_bytewise_operations.c
OpenSSL/tests/random/: test_generate_and_xor_random_numbers.c
Python/: README.md
Python/basics/hash/: hash-hashlib.py
Python/basics/hmac/: hmac-cryptodome.py  hmac-hashlib.py  hmac-simple.py  mykey.py
Python/basics/random/: print-bin.py  print-hex.py
Python/basics/servers/server-1/: server-pwntools.py  starter.py
Python/basics/servers/server-2/: server-pwntools.py  starter.py
Python/basics/symmcrypto/: manual-cbc.py  other-modes.py
Python/ctf/Hash/1-Equality/: __init__.py  md4_ex1.py
Python/ctf/Hash/2-HA-Shop/: __init__.py  length_extender.py  prof.py  sha256.py
Python/ctf/RSA/: public_key.pem  public_key_generator.py
Python/ctf/RSA/inferious-prime-new/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-1/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-2/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-3/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-4/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-5/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-6-new/: __init__.py
Python/ctf/RSA/rsa-level-7/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-8/: __init__.py  prof.py
Python/ctf/RSA/rsa-level-9-new/: __init__.py  boneh_dufree.sagews  prof.py
Python/ctf/RSA/rsa_wiener_attack/: RSAwienerHacker.py
Python/ctf/Symmetric/back-to-the-future/: client.py  server.py
Python/ctf/Symmetric/decrypt-the-flag/: client.py  server.py
Python/ctf/Symmetric/fool-the-oracle/: client-not-reduced.py  client-reduced.py  server.py
Python/ctf/Symmetric/fool-the-oracle/fool-the-oracle-v2/: client.py  server.py
Python/ctf/Symmetric/force-decryption/: force-decryption.py  server.py
Python/ctf/Symmetric/forge-a-cookie/: forge-a-cookie.py  server.py
Python/ctf/Symmetric/forge-another-cookie/: forge-a-cookie.py  server.py
Python/ctf/Symmetric/guess-mode-double-shot/: client.py
Python/ctf/Symmetric/guess-mode-one-shot/: guess-mode-one-shot.py  server.py
Python/ctf/Symmetric/long-secret/: client.py  server.py
Python/ctf/Symmetric/new/fool-the-oracle-v4/: client.py
Python/ctf/test/: solution1.py
data/: symm_decrypt.txt  symm_decrypt_result.txt
docs/: asymmetric.md  symmetric.md
include/: utils.h
include/bignum/: bignum_utils.h
include/enc_symm/: encryption_symmetric_utils.h
include/hashing/: hashing.h
include/rand/: rand.h
include/random/: random_utils.h
include/tests/: tests.h
src/: main.c  utils.c
src/bignum/: bignum_basic_operations.c
src/enc_symm/: enc_symm_decrypt_aes256cbc_compute_from_file.c  enc_symm_decrypt_compute_from_file.c  enc_symm_encrypt_aes256cbc_compute.c  enc_symm_encrypt_aes256cbc_compute_from_file.c
src/hashing/: hashing_hmac_compute.c  hashing_hmac_compute_from_file.c  hashing_hmac_verify.c  hashing_md5_basics.c  hashing_md5_compute.c
src/rand/: bytewise_operations.c  create_randoms.c  randoms_bytewise_operations.c  randoms_create_randoms.c
src/random/: random_seed_prng.c
tests/enc_symm/: test_encrypt_aes256cbc_compute_from_file.c  test_encrypt_decrypt_aes256cbc_compute.c
tests/hashing/: test_hmac_compute_from_file.c  test_hmac_sha256_compute.c  test_hmac_sha256_verify.c  test_md5.c
(+9 files in other folders)
